--- a/src/public/index.html
+++ b/src/public/index.html
@@ -20,23 +20,23 @@
 <body>
 <div id="phaser" style = "display: none"></div>
 <div id="game">
-    <canvas id="pixel" width="384" height="384"></canvas>
+    <canvas id="pixel" width="160" height="144"></canvas>
 </div>
 
 <script type="text/javascript">
-
-var pixelcontent = null;
-var pixelwidth = 0;
-var pixelheight = 0; 
-
 window.onload = function() {
 
-	//	Create your Phaser game and inject it into the gameContainer div.
-	//	We did it in a window.onload event, but you can do it anywhere (requireJS load, anonymous function, jQuery dom ready, - whatever floats your boat)
-	var game = new Phaser.Game(32, 32, Phaser.AUTO, 'phaser');
+	var game = new Phaser.Game(160, 144, Phaser.AUTO, 'phaser');
+    game.CS = {
+        settings: {
+            originWidth: 160,
+            originHeight: 144,
+            pixelcontent: null,
+            pixelwidth: 0,
+            pixelheight: 0
+        }
+    }
 
-	//	Add the States your game has.
-	//	You don't have to do this in the html, it could be done in your Boot state too, but for simplicity I'll keep it here.
 	game.state.add('Boot', BasicGame.Boot);
 	game.state.add('Preloader', BasicGame.Preloader);
 	game.state.add('MainMenu', BasicGame.MainMenu);
